# feral-familiars

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 81532c1e2e1b_refactor_implement_domain_enums_and_.py
bot/: db.py  main.py  migrate.py
bot/application/: capture_manager.py  ritual_manager.py
bot/commands/: admin.py  game.py  general.py  tasks.py  trade.py
bot/domain/: constants.py  enums.py  naming.py
bot/models/: __init__.py  base.py  config.py  encounter.py  essence.py  familiar.py  trade.py
bot/services/: bestow_service.py  config_service.py  encounter_service.py  guidance_service.py  guild_service.py  inventory_service.py  leveling_service.py  passive_service.py  ritual_service.py  surge_service.py  transmute_service.py
bot/ui/: embeds.py
bot/utils/: config.py  constants.py  ui.py
docs/: ASSETS.md  GAMEPLAY.md  GAME_OVERVIEW.md  RITUALS.md
tests/: conftest.py  test_leveling.py  test_passives.py  test_rituals.py  test_transactions.py
tools/: familiar_prompter.py  optimize_assets.py
