[project]
name = "feral-familiars"
version = "0.1.0"
description = "A Discord game bot about capturing essences and spirits to create familiars."
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.2",
    "SQLAlchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
